external-crates/move/crates/move-compiler/tests/move_2024/typing/macro_duck_typing_constraint.exp
error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/typing/macro_duck_typing_constraint.move:11:17
   │
11 │         mycopy(&$v);
   │                 ^^ Macro parameters are not allowed to appear in paths
   │
   = Macro parameters are always treated as value expressions, and are not modified by path operations.
     Path operations include 'move', 'copy', '&', '&mut', and field references

